# simle_dqs

./: CMakeLists.txt  README.md
cli/: CMakeLists.txt  cli.cpp
svr/: CMakeLists.txt  svr.cpp
third_libs/: CMakeLists.txt
third_libs/consul/: CMakeLists.txt  service_consumer.cpp  service_consumer.h  service_provider.cpp  service_provider.h
third_libs/consul/include/ppconsul/: kwargs.h
third_libs/consul/others/: CMakeLists.txt
third_libs/etcd/: .etcdclient.cpp.swo  CMakeLists.txt  etcd_cli.cpp  etcd_cli.h  etcdclient.cpp  etcdclient.h  service_consumer.cpp  service_consumer.h  service_provider.cpp  service_provider.h
third_libs/thrift/: CMakeLists.txt  dqsService.cpp  dqsService.h  dqs_constants.cpp  dqs_constants.h  dqs_types.cpp  dqs_types.h
